--- a/index.html
+++ b/index.html
@@ -94,17 +94,30 @@
         <div class="about-details-container">
           <div class="about-containers">
             <div class="details-container">
-
+              <img
+              src="./assets/experience.png"
+              alt="Experience icon"
+              class="icon"
+            />
+            <h3>Experience</h3>
+            <p>Epack Polymers Pvt Ltd<br />Full Stack Development (Intern)</p>
+          </div>
+          <div class="details-container">
+            <img
+              src="./assets/education.png"
+              alt="Education icon"
+              class="icon"
+            />
               <h3>Education</h3>
               <p>Pursuing BTech in Computer Science from ABES Engineering College<br /></p>
             </div>
           </div>
           <div class="text-container">
             <p>
-              Versatile and aspiring Full Stack Developer with a drive to create exceptional user experiences through the use 
-              of MERN stack, HTML, CSS, and JavaScript. Seeking a career opportunity within a progressive organization to 
-              leverage strong technical and problem-solving skills and by continuous learning and deliverance contribute to 
-              organizational profitability.
+              Aspiring Full Stack Developer with expertise in MERN stack, HTML, CSS, JavaScript, and proficiency in programming languages 
+like Python, Java, and SQL. Skilled in building efficient, scalable web applications and delivering user-focused solutions. Seeking an 
+opportunity in a dynamic organization to apply technical skills, collaborate on innovative projects, and drive growth through 
+continuous learning and impactful contributions.
             </p>
           </div>
         </div>
@@ -153,7 +166,7 @@
                   class="icon"
                 />
                 <div>
-                  <h3>JavaScript</h3>
+                  <h3>TypeScript/JavaScript</h3>
                   <p>Intermediate</p>
                 </div>
               </article>
@@ -165,7 +178,7 @@
                 />
                 <div>
                   <h3>React.js</h3>
-                  <p>Basic</p>
+                  <p>Intermediate</p>
                 </div>
               </article>
               <article>
@@ -284,7 +297,7 @@
                   class="icon"
                 />
                 <div>
-                  <h3>OOPs</h3>
+                  <h3>Database Management System (DBMS)</h3>
                 </div>
               </article>
               <article>
@@ -295,7 +308,6 @@
                 />
                 <div>
                   <h3>Git/GitHub</h3>
-                  <p>Basic</p>
                 </div>
               </article>
             </div>
@@ -410,7 +422,7 @@
             alt="Email icon"
             class="icon contact-icon email-icon"
           />
-          <p><a href="mailto:hardikbhansali2511@gmail.com">hardikbhansali2511@gmail.com</a></p>
+          <p><a href="mailto:hardikbhansali2511@gmail.com">be.hardikofficial@gmail.com</a></p>
         </div>
         <div class="contact-info-container">
           <img
